# sqlite-simple-tokenizer

./: Cargo.toml  LICENSE-APACHE  README.md  RELEASES.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
data/: stopword.txt
src/: create_extension.rs  error.rs  lib.rs  load_extension.rs  pinyin.rs  tokenizer.rs  utils.rs
src/tokenizer/: jieba_tokenizer.rs  mod.rs  simple_tokenizer.rs  utils.rs
